# caifs-pypi

./: .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: vendor.sh
src/caifs/: cli.py
tests/: test_cli.py
